tests/auto-vpa/generated-daemonset-vpa.yaml
---
apiVersion: autoscaling.k8s.io/v1
kind: VerticalPodAutoscaler
metadata:
  name: node-agent
  namespace: test
spec:
  targetRef:
    apiVersion: apps/v1
    kind: DaemonSet
    name: node-agent
  updatePolicy:
    updateMode: InPlaceOrRecreate
  resourcePolicy:
    containerPolicies:
      - containerName: "*"
        controlledResources:
          - cpu
        controlledValues: RequestsAndLimits
        minAllowed:
          cpu: 50m
        maxAllowed:
          cpu: "1"
