tests/auto-vpa/generated-deployment-vpa.yaml
---
apiVersion: autoscaling.k8s.io/v1
kind: VerticalPodAutoscaler
metadata:
  name: web
  namespace: test
spec:
  targetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: web
  updatePolicy:
    updateMode: InPlaceOrRecreate
    minReplicas: 1
  resourcePolicy:
    containerPolicies:
      - containerName: "*"
        controlledResources:
          - cpu
          - memory
        controlledValues: RequestsAndLimits
        minAllowed:
          cpu: 50m
          memory: 64Mi
        maxAllowed:
          cpu: "3"
          memory: 6Gi
